Finished first page grid

--- a/api-app/ApiStatsApp/web.config
+++ b/api-app/ApiStatsApp/web.config
@@ -12,4 +12,11 @@
       </aspNetCore>
     </system.webServer>
   </location>
+  <system.web.extensions>
+    <scripting>
+      <webServices>
+        <jsonSerialization maxJsonLength="50000000" />
+      </webServices>
+    </scripting>
+  </system.web.extensions>
 </configuration>
