--- a/stats-app/package.json
+++ b/stats-app/package.json
@@ -12,8 +12,10 @@
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.4.1",
     "highcharts-react-official": "^3.0.0",
+    "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
+    "react-datepicker": "^2.14.1",
     "react-digital-grid": "^1.0.8",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
