--- a/stats-app/package.json
+++ b/stats-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://miscalencu.github.io/covid-stats-belgium",
+  "homepage": "https://miscalencu.github.io/Covid-Stats-Belgium",
   "name": "stats-app",
   "version": "0.1.0",
   "private": true,
@@ -10,10 +10,12 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.4.1",
     "highcharts-react-official": "^3.0.0",
     "moment": "^2.24.0",
     "react": "^16.13.1",
+    "react-app-polyfill": "^1.0.6",
     "react-bootstrap": "^1.0.0",
     "react-datepicker": "^2.14.1",
     "react-digital-grid": "^1.0.8",
@@ -35,12 +37,14 @@
     "production": [
       ">0.2%",
       "not dead",
-      "not op_mini all"
+      "not op_mini all",
+      "ie >= 9"
     ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
-      "last 1 safari version"
+      "last 1 safari version",
+      "ie >= 9"
     ]
   }
 }
