--- a/stats-app/package.json
+++ b/stats-app/package.json
@@ -13,11 +13,13 @@
     "@testing-library/user-event": "^7.2.1",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.4.1",
+    "highcharts": "^8.0.4",
     "highcharts-react-official": "^3.0.0",
     "moment": "^2.24.0",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
     "react-bootstrap": "^1.0.0",
+    "react-cookie": "^4.0.3",
     "react-datepicker": "^2.14.1",
     "react-digital-grid": "^1.0.8",
     "react-dom": "^16.13.1",
