--- a/api-app/ApiStatsApp/web.config
+++ b/api-app/ApiStatsApp/web.config
@@ -5,7 +5,7 @@
       <handlers>
         <add name="aspNetCore" path="*" verb="*" modules="AspNetCoreModuleV2" resourceType="Unspecified" />
       </handlers>
-      <aspNetCore processPath="D:\Sources\GitHub\Covid-Stats-Belgium\api-app\ApiStatsApp\bin\Debug\netcoreapp3.1\ApiStatsApp.exe" arguments="" stdoutLogEnabled="false" hostingModel="InProcess">
+      <aspNetCore processPath="bin\Debug\netcoreapp3.1\ApiStatsApp.exe" arguments="" stdoutLogEnabled="false" hostingModel="inprocess">
         <environmentVariables>
           <environmentVariable name="ASPNETCORE_ENVIRONMENT" value="Development" />
         </environmentVariables>
